--- a/edaqas-secrets-decoder.html
+++ b/edaqas-secrets-decoder.html
@@ -801,6 +801,12 @@ h1 + h2 {
 	font-style: italic;
 }
 
+h3 {
+	font-weight: bold;
+	font-size: 100%;
+	margin-bottom: 0.5em;
+}
+
 .region {
 	margin: 1em auto;
 	background: white;
@@ -820,7 +826,7 @@ textarea.large {
 }
 
 .field {
-	margin: 1em 0;
+	margin: 1.5em 0;
 }
 
 em {
@@ -830,6 +836,10 @@ em {
 
 .cta {
 	text-align: center;
+}
+
+input {
+	margin: 0 1em;
 }</style>
 	
 	<script>
@@ -851,7 +861,7 @@ em {
 		let share_count = 0
 		function add_share() {
 			share_count += 1
-			const new_share = `Secret #${share_count}<textarea id='secret-${share_count}'></textarea>`
+			const new_share = `<h3>Code #${share_count}</h3><textarea id='secret-${share_count}'></textarea>`
 			const child = document.createElement('div')
 			child.id = `div-share-${share_count}`
 			child.innerHTML = new_share
@@ -899,16 +909,30 @@ em {
 <body>
 
 <div class='region'>
+<h1>Edaqa's Secret Sharing</h1>
+<h2>A secret sharing tool by by <a href='https://edaqa.com/'>Edaqa Mortoray</a></h2>
+
+<p>This tool can be used to decode shared secrets. Collect the codes from enough recipients and add them to the inputs below.</p>
+
 <div id='shares'>
 </div>
-<button onclick='add_share()'>+</button>
-<button onclick='remove_share()'>-</button>
-<button onclick='decode()'>Decode</button>
+<p class='cta'>
+	<button onclick='add_share()'>+ Add Code</button>
+	<button onclick='remove_share()'>- Remove Code</button>
+</p>
+<p class='cta'>
+	<button onclick='decode()'>Decode</button>
+</p>
  </div>
  
  <div class='region'>
- Decoded Message:
+ <h3>Decoded Message</h3>
  <textarea class='large' id='output-message'></textarea>
  </div>
+ 
+ <footer class='region'>
+ <p>This tool is provided as-is without warranty of any kind, express or implied. Refer to the <a href="https://github.com/mortoray/edaqas-secrets">project page</a> for more information, or to provide feedback.</p>
+ </footer>
+ 
 </body>
 </html>
