--- a/edaqas-secrets.html
+++ b/edaqas-secrets.html
@@ -789,6 +789,16 @@ const footer_block = '-- -- End Code -- --'</script>
 	background: #CCC;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+	border-bottom: thin dotted #457b9d;
+}
+
+h1, h2, h3 {
+	color: #457b9d;
+}
+
 h1 { 
 	margin-top: 0;
 	margin-bottom: 1rem;
@@ -811,7 +821,15 @@ h3 {
 	margin: 1em auto;
 	background: white;
 	max-width: 60em;
-	padding: 1em;
+	padding: 1em 2em;
+	border-radius: 5px;
+	color: #1d3557;
+	box-shadow: 0px 0px 5px #457b9d;
+}
+
+.info {
+	margin-top: 0.5em;
+	font-style: italic;
 }
 
 textarea {
@@ -819,6 +837,11 @@ textarea {
 	width: 100%;
 	height: 5em;
 	resize: vertical;
+}
+
+textarea, input {
+	background: #F0F9F9;
+	color: black;
 }
 
 textarea.large {
@@ -947,31 +970,34 @@ input {
 <p>Use this tool to allow friends, colleagues, and loved ones, gain access to your systems in case of an emergency. It allows you to break a secret into parts, and if enough recipients agree to combine their parts, the initial secret can be recovered.</p>
 
 <div class='field'>
-<h3>Secret Message</h3>
-<textarea id='input-message' class='large'></textarea>
-<i>This contains the secret information. It should only contain data that can be revocable or changed, such as passwords or keys to documents, applications, and websites.</i>
+	<h3>Secret Message</h3>
+	<div><textarea id='input-message' class='large'></textarea></div>
+	<div class='info'>This contains the secret information. It should only contain data that can be revocable or changed, such as passwords or keys to documents, applications, and websites.</div>
 </div>
 
 <div class='field'>
-<h3>Public Message</h3>
-<textarea id='public-message' class='large'></textarea>
-<i>This message will *not* be encrypted, but added as a clear text header to the recipient instructions.</i>
+	<h3>Public Message</h3>
+	<div><textarea id='public-message' class='large'></textarea></div>
+	<div class='info'>This message will *not* be encrypted, but added as a clear text header to the recipient instructions.</div>
 </div>
 
 <div class='field'>
 	<h3>Who would like to share it with?</h3>
-	<span id='share-names'></span>
-	<button onclick='add_name()'>+</button>
-	<button onclick='remove_name()'>-</button>
-	<br/>
-	<i>This list of people is <b>not</b> included in the message. You need to ensure they know how to find each other.</i>
+	<div>
+		<span id='share-names'></span>
+		<button onclick='add_name()'>+</button>
+		<button onclick='remove_name()'>-</button>
+	</div>
+	<p class='info'>This list of people is <b>not</b> included in the message. You need to ensure they know how to find each other.</p>
 </div>
 
 
 <div class='field'>
-	<h3>How many are needed to decode?</h3>
-	<input id='number-required' type="number" min="1"><br/>
-	<i>This is the minimum number of people required who can combine their codes to restore the original secret.</i>
+	<h3>How many people are needed to decode?</h3>
+	<div>
+		<input id='number-required' type="number" min="1">
+	</div>
+	<p class='info'>This is the minimum number of people required who can combine their codes to restore the original secret.</p>
 </div>
 
 <div class='cta'>
@@ -984,8 +1010,16 @@ input {
 		Download the <a href='./edaqas-secrets-decoder.html' download>decoder</a> (right-click "Save As"), attach it to the message you send to each recipient. This is important as a public decoder may not be available in the future.
 	</div>
 	<div>Use the "Sent" checkbox to track who've you sent the code to. Be aware that you can't regenerate codes later. Pressing "Encode" again will generate an entirely new set of codes that must be sent to the recipients.</div>
+	<div>Only send messages on secure channels, such as Signal or encrypted email. Anybody who could intercept enough messages can recover the secret.</div>
 	
 <div id='shares'></div>
+</div>
+
+<div class='region'>
+<h1>Security Features</h1>
+<p>This tool is standalone, using no additional resources, and making no network requests. It can be downloaded and used offline for added security. Be sure to download the <a href='./edaqas-secrets-decoder.html' download>decoder</a> as well.</p>
+<p>No reliance on third-parties. Recipients should be provided with the decoder, making the codes stable at the time they are generated.</p>
+<p>The shared secrets are implement with Shamir's secret sharing algorithm. It is believed that no information about the secret is leaked until the quorom of recipients combines their codes.</p>
 </div>
 
 <footer class='region'>
