--- a/edaqas-secrets-decoder.html
+++ b/edaqas-secrets-decoder.html
@@ -843,6 +843,9 @@ textarea, input {
 	background: #F0F9F9;
 	color: black;
 }
+textarea[readonly] {
+	background: #F9F9F9;
+}
 
 textarea.large {
 	height: 10em;
