--- a/edaqas-secrets.html
+++ b/edaqas-secrets.html
@@ -843,6 +843,9 @@ textarea, input {
 	background: #F0F9F9;
 	color: black;
 }
+textarea[readonly] {
+	background: #F9F9F9;
+}
 
 textarea.large {
 	height: 10em;
@@ -897,13 +900,14 @@ input {
 			
 			for (const [index, share] of shares.entries()) {
 				let share_div = document.createElement('div')
-				share_div.classList.add('region')
+				//share_div.classList.add('region')
 				
 				let rcpt = document.createElement('h3')
 				rcpt.innerText = `For ${names[index]}`
 				share_div.appendChild(rcpt)
 				
 				let share_text = document.createElement('textarea')
+				share_text.readOnly = true
 				share_text.id = `share-${index}`
 				share_text.value = assemble_message(share)
 				share_div.appendChild(share_text)
@@ -995,7 +999,7 @@ input {
 <div class='field'>
 	<h3>How many people are needed to decode?</h3>
 	<div>
-		<input id='number-required' type="number" min="1">
+		<input id='number-required' type="number" min="2" value="2">
 	</div>
 	<p class='info'>This is the minimum number of people required who can combine their codes to restore the original secret.</p>
 </div>
